Add required classes and logics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=rocksdb
+spring.datasource.url=jdbc:mysql://localhost:3306/user
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.sql.init.mode=always
+
+spring.h2.console.enabled=true
+spring.application.name=RocksDb
